...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddNewMemberActivity">
...

                <TextView
                    android:id="@+id/tvCustomerP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvCompanyP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvMemberP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/etUsername"
                        android:paddingLeft="20dp"
                        android:paddingTop="0dp"
...

                    <EditText
                        android:id="@+id/etCompanyname"
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
...

                    <EditText
                        android:id="@+id/etResellerfullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/lstname"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/cylindername"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/pasalname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/resellerphonenum"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/companyphonenum"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/memberphonenum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/reselleraddress"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/companyaddress"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/memberaddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    <!--            Admin-->
                    <LinearLayout
                        android:id="@+id/llAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
...

                    <LinearLayout
                        android:id="@+id/llemploye"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
...

                    <EditText
                        android:id="@+id/etresellerRate"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/cylincom"
                        android:paddingLeft="25dp"
                        android:layout_width="wrap_content"
...

                <LinearLayout
                    android:id="@+id/btnAddMember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnAddCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnAddReseller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
